--- a/DubiRent-Asp.net/DubiRent/DubiRent/Views/Home/Privacy.cshtml
+++ b/DubiRent-Asp.net/DubiRent/DubiRent/Views/Home/Privacy.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
+
+<partial name="_Breadcrumb" />
+
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
