--- a/DubiRent-Asp.net/DubiRent/DubiRent/Views/Shared/_Layout.cshtml
+++ b/DubiRent-Asp.net/DubiRent/DubiRent/Views/Shared/_Layout.cshtml
@@ -24,12 +24,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    @using Microsoft.AspNetCore.Identity
+                    @inject SignInManager<DubiRent.Data.Models.AppUser> SignInManager
                     @{
                         var controller = ViewContext.RouteData.Values["Controller"]?.ToString();
                         var action = ViewContext.RouteData.Values["Action"]?.ToString();
                         var isHomeActive = controller == "Home" && action == "Index";
                         var isPropertiesActive = controller == "Property" && action == "Properties";
-                        var isAdminActive = controller == "Property" && (action == "Admin" || action == "Create" || action == "Edit" || action == "Details");
+                        var isAdminActive = controller == "Property" && (action == "Admin" || action == "Create" || action == "Edit" || action == "ViewingRequests");
+                        var isFavouritesActive = controller == "Property" && action == "MyFavourites";
                     }
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
@@ -38,11 +41,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark @(isPropertiesActive ? "active" : "")" asp-area="" asp-controller="Property" asp-action="Properties">Properties</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark @(isAdminActive ? "active" : "")" asp-area="" asp-controller="Property" asp-action="Admin">AdminPanel</a>
-                        </li>
+                      
+                            <li class="nav-item">
+                                <a class="nav-link text-dark @(isAdminActive ? "active" : "")" asp-area="" asp-controller="Property" asp-action="Admin">AdminPanel</a>
+                            </li>
+                        
                     </ul>
-                    <partial name="_LoginPartial" />
+                    <ul class="navbar-nav">
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark @(isFavouritesActive ? "active" : "")" asp-area="" asp-controller="Property" asp-action="MyFavourites">
+                                    <i class="fas fa-heart me-1"></i>
+                                </a>
+                            </li>
+                        }
+                        <partial name="_LoginPartial" />
+                    </ul>
                 </div>
             </div>
         </nav>
